# soma

./: Cargo.toml  LICENSE  README.md
soma/: Cargo.toml
soma/src/: check.rs  cli.rs  list.rs  main.rs  scan.rs
soma/tests/: cli.rs
somacommon/: Cargo.toml
somacommon/src/: lib.rs
somasrv/: Cargo.toml
somasrv/src/: cli.rs  config.rs  main.rs
somasrv/tests/: cli.rs
