[package]
name = "somasrv"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
simplelog = "0.12.2"
somacommon = { path = "../somacommon" }
structopt = "0.3.26"
toml = "0.8.23"

[dev-dependencies]
assert_cmd = "2.0.17"
assert_fs = "1.1.3"
predicates = "3.1.3"
